--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </h1>
         <h6 class="heading3">Software Engineer</h6>
         <a class="btn btn-full btn-animi project" href="#">Projects</a>
-        <a class="btn btn-ghost btn-animi" href="#">View Resume</a>
+        <a class="btn btn-ghost btn-animi" href="https://drive.google.com/open?id=12VyAvdrV8yUyuFV6_8Kj2SMDD-BVT3_K" target="_blank">View Resume</a>
       </div>
     </header>
 
