--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="resource/css/style.css" />
     <link rel="stylesheet" type="text/css" href="resource/css/quaries.css" />
 
-    <title>ASODEV</title>
+    <title>Olabanji-ASODEV</title>
   </head>
   <body>
     <header  id="header">
