--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       type="text/css"
       href="vendors/css/animate.css"
     />
-    <link rel="stylesheet" type="text/css" href="resource/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="resource/css/quaries.css" />
+    <link rel="stylesheet" type="text/css" href="Resource/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="Resource/css/quaries.css" />
 
     <title>Olabanji-ASODEV</title>
+    <link rel="icon"  type="image/png" href="/Resource/images/logoaso.png" >
   </head>
   <body>
     <header  id="header">
