--- a/index.html
+++ b/index.html
@@ -71,13 +71,12 @@
         <div class="col span-1-of-2 steps-box">
           <div >
             <div class="long-copy"> 
-             <p>I'm a motivated and result driven individual based in Lagos, Nigeria.
- I have a strong self-management and interpersonal skills which enable me to work well in diverse teams to meet targets and achieve goals, my skills in web technologies are HTML, CSS, JavaScript( vanilla Js, React Js, Node.Js), MongoDB and Jade (Pug). <br> </p>
+             <p>I'm a motivated and result driven individual based in Lagos, Nigeria. I have a strong self-management and interpersonal skills which enable me to work well in diverse teams to meet targets and achieve goals.
+              My skills in web technologies are HTML, CSS, JavaScript( vanilla Js, React Js, Node.Js), MongoDB and Jade (Pug). <br> </p>
 
               <p class="para">
                
- I am looking forward to building products that will challenge and test my competence in a way that allow me contribute effectively, while also developing my skills.
- I have passion for programming, video games and foootball.
+                I am looking forward to building products that will challenge and test my competence in a way that allow me contribute effectively, while also developing my skills. I have passion for programming, video games and foootball.
               </p>
              
           </div>
