--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="Resource/css/quaries.css" />
 
     <title>Olabanji-ASODEV</title>
-    <link rel="icon"  type="image/png" href="/Resource/images/logoaso.png" >
+    <link rel="icon"  type="image/png" href="Resource/images/logoaso.png" >
   </head>
   <body>
     <header  id="header">
@@ -30,7 +30,7 @@
         <div class="row">
           <a href="#header">
             <img
-            src="resource/images/logoaso.png"
+            src="Resource/images/logoaso.png"
             alt="ominfood logo"
             class="logo"
           />
@@ -63,7 +63,7 @@
       <div class="row ">
         <div class="col span-1-of-2  js--wp-1 steps-box">
           <img
-            src="resource/images/words.jpg"
+            src="Resource/images/words.jpg"
             alt="ominfood app on Iphone"
             class="app-screen"
           />
@@ -92,7 +92,7 @@
       <div class="row  js--wp-2">
         <div class="col span-1-of-4 box">
           <img
-            src="resource/images/shortlet.jpg"
+            src="Resource/images/shortlet.jpg"
             alt="picture of lisbon"
             class="city-pic"
           />
@@ -117,7 +117,7 @@
 
         <div class="col span-1-of-4 box">
           <img
-            src="resource/images/color_game.jpg"
+            src="Resource/images/color_game.jpg"
             alt="picture of San Francisco"
             class="city-pic"
           />
@@ -141,7 +141,7 @@
 
         <div class="col span-1-of-4 box">
           <img
-            src="resource/images/Natours.jpg"
+            src="Resource/images/Natours.jpg"
             alt="picture of London"
             class="city-pic"
           />
@@ -165,7 +165,7 @@
 
         <div class="col span-1-of-4 box">
           <img
-            src="resource/images/devhangout.jpg"
+            src="Resource/images/devhangout.jpg"
             alt="picture of berlin"
             class="city-pic"
           />
@@ -198,7 +198,7 @@
           <li>
             <figure class="meal-photo">
               <img
-                src="resource/images/html-css-js.jpg"
+                src="Resource/images/html-css-js.jpg"
                 alt="Korean bibimbap with egg and vegetables"
               />
             </figure>
@@ -207,7 +207,7 @@
           <li>
             <figure class="meal-photo">
               <img
-                src="resource/images/bootstrap.png"
+                src="Resource/images/bootstrap.png"
                 alt="Autumn pumpkin soup"
               />
             </figure>
@@ -216,7 +216,7 @@
           <li>
             <figure class="meal-photo">
               <img
-                src="resource/images/react2.jpg"
+                src="Resource/images/react2.jpg"
                 alt="Simple italian pizza with cherry tomatoes"
               />
             </figure>
@@ -225,7 +225,7 @@
           <li>
             <figure class="meal-photo">
               <img
-                src="resource/images/node.jpg"
+                src="Resource/images/node.jpg"
                 alt="Chicken breast steak with vegetables"
               />
             </figure>
@@ -233,7 +233,7 @@
           <li>
             <figure class="meal-photo">
               <img
-                src="resource/images/mongodb.png"
+                src="Resource/images/mongodb.png"
                 alt="Autumn pumpkin soup"
               />
             </figure>
@@ -280,7 +280,7 @@
     <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
-    <script src="/vendors/js/jquery.waypoints.min.js"></script>
-    <script src="/Resource/js/script.js"></script>
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
+    <script src="Resource/js/script.js"></script>
   </body>
 </html>
