--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </div>
 
           <div class="city-list">
-            <a href="#" target="_blank" class="btn btn-full "><i class="ion-link cities-icon" ></i>view</a>
+            <a href="https://devhangoutng.herokuapp.com/" target="_blank" class="btn btn-full "><i class="ion-link cities-icon" ></i>view</a>
           </div>
       </div>
     </section>
